add: init the environment

--- a/1.env.md
+++ b/1.env.md
@@ -8,3 +8,9 @@
 - 切换源： nrm use taobao
 - 增加定制源： nrm add  custom http://10.0.0.1:6666
 - 删除源： nrm del custom
+
+### 2. Course env
+
+- 安装： npm install -g imooc-es-cli
+- 帮助命令： imooc-es-cli -h
+- 初始化工程： imooc-es-cli init
