add: partly of Array

--- a/4.Array.md
+++ b/4.Array.md
@@ -1,25 +1,124 @@
 # Array
 
-### 1. 遍历数组
+### 1. ES5 遍历数组
 
 - for 循环
 
   ```js
   let arr = [1, 2, 3, 4]
+  
+  for (let i = 0; i < arr.length; i++) {
+      console.log(arr[i])
+  }
   ```
 
+- forEach: 没有返回值，对每个元素调用 func，不支持 break 和 continue
+
+  ```js
+  let arr = [1, 2, 3, 4]
   
+  arr.forEach((elem, index, array) => {
+      console.log(elem, index, array)
+  })
+  // elem 为数组元素，index 为数组索引，array 为原数组
+  ```
 
-- forEach(): 没有返回值，对每个元素调用 func
+- map: 返回新的Array，每个元素为调用 func 的结果
 
-- map(): 返回新的Array，每个元素为调用 func 的结果
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let result = arr.map(value => {
+      value += 1
+      console.log(value) // 依次输出 2 3 4 5
+      return value
+  })
+  console.log(result) // [2, 3, 4, 5]
+  ```
 
-- filter(): 返回符合 func 条件的元素数组
+- filter: 返回符合 func 条件的元素数组
 
-- some(): 返回 boolean, 判断是否有元素符合 func 条件
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let result = arr.filter(value => {
+      console.log(value) // 依次输出 1 2 3 4 
+      return value === 2
+  })
+  console.log(result) // [2]
+  ```
 
-- every(): 返回 boolean, 判断每个元素是否符合 func 条件
+- some: 返回 boolean, 判断是否有元素符合 func 条件
 
-- reduce(): 接受一个函数作为累加器
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let result = arr.some(value => {
+      console.log(value) // 依次输出 1 2 3 4
+      return value === 4
+  })
+  
+  console.log(result) // true
+  ```
+
+- every: 返回 boolean, 判断每个元素是否符合 func 条件，不支持 break 和 continue
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let result = arr.every(value => {
+      console.log(value) // 输出 1 不满足 1 === 2 直接返回 false
+      return value === 2
+  })
+  console.log(result) // false
+  ```
+
+- reduce: 接受一个函数作为累加器
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let sum = arr.reduce((prev, cur, index, array) => {
+      return prev + cur
+  }, 0)
+  console.log(sum) // 1+2+3+4 = 10
+  ```
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let max = arr.reduce((prev, cur) => {
+      return Math.max(prev, cur)
+  })
+  console.log(max) // 4
+  ```
+
+  ```js
+  let arr = [1, 2, 3, 2, 4]
+  
+  let res = arr.reduce((prev, cur) => {
+      prev.indexOf(cur) === -1 && prev.push(cur)
+      return prev
+  }, [])
+  console.log(res) //  [1, 2, 3, 4]
+  ```
 
 - for ... in ...
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  for (let index in arr) {
+      console.log(arr[index]) // 1 2 3 4
+  }
+  ```
+
+  可以遍历数组，同时支持 break 和 continue 等。如果 arr 中有自定义属性，也会被遍历出来。
+
+### 2. ES6 遍历数组
+
+- find: 返回第一个通过测试的元素
+- findIndex: 第一个满足条件的元素索引
+- for ... of ...
+- values
+- keys
+- entries
