add: complete the Array

--- a/4.Array.md
+++ b/4.Array.md
@@ -117,8 +117,99 @@
 ### 2. ES6 遍历数组
 
 - find: 返回第一个通过测试的元素
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let res = arr.find(value => {
+      return value === 2
+  })
+  console.log(res) // 2
+  ```
+
 - findIndex: 第一个满足条件的元素索引
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  
+  let res = arr.findIndex(value => {
+      return value === 2
+  }) 
+  console.log(res) // 1
+  ```
+
 - for ... of ...
-- values
-- keys
-- entries
+
+  ```js
+  // for (variable of iterable) {}
+  // 遍历可迭代对象
+  
+  let arr = [1, 2, 3, 4]
+  for (let item of arr) {
+      console.log(item) // 依次输出 1 2 3 4
+  }
+  ```
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  for (let item of arr.values()) {
+      console.log(item) // 依次输出 1 2 3 4
+  }
+  ```
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  for (let item of arr.keys()) {
+      console.log(item) // 依次输出 0 1 2 3
+  }
+  ```
+
+  ```js
+  let arr = [1, 2, 3, 4]
+  for (let [index, item] of arr.entries()) {
+      console.log(index) // 依次输出 0 1 2 3 
+      console.log(item) // 依次输出 1 2 3 4
+  }
+  ```
+
+### 3. 函数参数
+
+- 函数参数存在默认值
+
+  ```js
+  function side1(arr) {
+      arr[0] = arr[2]
+  }
+  
+  function a(a, b, c = 3) {
+      c = 10
+      side1(arguments)
+      return a + b + c
+  }
+  
+  console.log(a(1, 1, 1))
+  // 存在函数参数默认值情况下，会形成单独的作用域。 c = 10 与函数参数中的 c 不是相同的变量
+  // arguments = [1, 1, 1]  a + b + c = 1 + 1 + 10 = 12
+  ```
+
+- 函数参数没有默认值
+
+  ```js
+  function side2(arr) {
+      arr[0] = arr[2]
+  }
+  function b(a, b, c) {
+      c = 10
+      side2(arguments)
+      return a + b + c
+  }
+  
+  console.log(b(1, 1, 1)) // 10 + 1 + 10 = 21
+  ```
+
+  [参考解析](http://coding.imooc.com/learn/questiondetail/201635.html)
+
+
+
+
+
