--- a/4.Array.md
+++ b/4.Array.md
@@ -209,7 +209,81 @@
 
   [参考解析](http://coding.imooc.com/learn/questiondetail/201635.html)
 
+### 4. 数组的扩展
 
+- 类数组/伪数组
 
+  ```js
+  // ES5 Array-Like 
+  let args = Array.prototype.slice.call(arguments)
+  let imgs = [].slice.call(document.querySelectorAll('img'))
+  ```
 
+- Array.from
 
+  ```js
+  // ES6 Array-Like
+  let arrLike = {
+      0: 'a',
+      1: 'b',
+      2: 'c',
+      length: 3
+  }
+  
+  let arr = Array.from(arrLike)
+  console.log(arr) // ['a', 'b', 'c']
+  ```
+
+  ```js
+  // 初始化一个长度为 5 的数组
+  // ES5
+  let arr = Array(6).join(' ').split('').map(item => 1)
+  console.log(arr) // [1, 1, 1, 1, 1]
+  
+  // ES6
+  let arr = Array.from({
+      length: 5
+  }, () => {
+      return 1
+  })
+  console.log(arr) // [1, 1, 1, 1, 1]
+  ```
+
+- Array.of
+
+  ```js
+  Array.of(7) // [7]
+  Array.of(1, 2, 3) // [1, 2, 3]
+  new Array(7) // [empty * 7] === [, , , , , ,]
+  new Array(1, 2, 3) // [1, 2, 3]
+  ```
+
+- copyWithin
+
+  在当前数组内部，将指定位置的成员复制到其他位置（会覆盖原有成员），然后返回当前数组。使用该方法，会修改当前数组。
+
+  ```js
+  // arr.copyWithin(target, start = 0, end = this.length)
+  let arr = [1, 2, 3, 4, 5]
+  console.log(arr.copyWithin(1, 3)) // [1, 4, 5, 4, 5]
+  ```
+
+- fill
+
+  ```js
+  let arr = new Array(3).fill(7)
+  console.log(arr) // [7, 7, 7]
+  
+  let arr = [1, 2, 3, 4, 5]
+  arr.fill('immoc', 1, 3)
+  console.log(arr) // [1, 'immoc', 'imooc', 4, 5]
+  ```
+
+- includes
+
+  ```js
+  let arr = [1, 2, 4, NaN]
+  console.log(arr.indexOf(2)) // 1
+  console.log(arr.indexOf(NaN)) // -1
+  console.log(arr.includes(NaN)) // true
+  ```
