add: complete the function

--- a/5.Function.md
+++ b/5.Function.md
@@ -62,11 +62,123 @@
   } = {}) {
       console.log(method)
   }
-  ajax('http://www.immoc.com')
+  ajax('http://www.immoc.com') // GET
+  ajax('http://www.immoc.com', { method: 'POST' }) // POST
   ```
 
 - length 属性
 
-  ```js
+  函数指定默认值之后，函数的 length 属性，将返回没有指定默认值的参数个数
   
+  ```js
+  function foo(x, y, z = 3) {
+      console.log(x, y)
+  }
+  console.log(foo.length) // 2
+  ```
+
+- 作用域
+
+  ```js
+  let x = 1
+  function foo(x, y = x) {
+      console.log(y)
+  }
+  foo(2) // 2
+  ```
+
+  ```js
+  let x = 1
+  function foo(y = x) {
+      let x = 2
+      console.log(y)
+  }
+  foo() // 1
+  ```
+
+- 函数的 name 属性
+
+  ```js
+  function foo() {}
+  console.log(foo.name) // foo 
+  console.log((new Function).name) // anonymous
+  ```
+
+### 2. 扩展运算符
+
+- 扩展运算符
+
+  把数组或者类数组展开成用逗号隔开的值
+
+  ```js
+  // ES5
+  function sum(x = 1, y = 2, z = 3) {
+      return x + y + z
+  }
+  console.log(sum.apply(null, [4])) // 9
+  console.log(sum.apply(null, [4, 5])) // 12
+  console.log(sum.apply(null, [4, 5, 6])) // 15
+  ```
+
+  ```js
+  function sum(x = 1, y = 2, z = 3) {
+      return x + y + z
+  }
+  console.log(sum(...[4])) // 4 + 2 + 3 = 9
+  console.log(sum(...[4, 5])) // 4 + 5 + 3 = 12
+  console.log(sum(...[4, 5, 6])) // 4 + 5 + 6 = 15
+
+- rest 参数
+
+  将逗号隔开的值组合成了一个数组
+
+  ```js
+  // ES5
+  function sum() {
+      let num = 0
+      Array.prototype.forEach.call(arguments, (item) => {
+          num += item
+      })
+      return num
+  }
+  console.log(sum(1, 2, 3, 4)) // 10
+  ```
+
+  ```js
+  function sum(...nums) {
+      let num = 0
+      nums.forEach(item => {
+          num += item
+      })
+      return num
+  }
+  console.log(sum(1, 2, 3, 4)) // 10
+  ```
+
+### 3. 箭头函数
+
+- this 指向定义时所在的对象，而不是调用时所在的对象
+
+  ```js
+  let foa = {
+      name: 'es',
+      say: () => {
+          console.log(this.name)
+      }
+  }
+  console.log(foa.say()) // undefined
+  ```
+
+- 不可以当作构造函数
+
+- 不可以使用 arguments 对象
+
+- 示例
+
+  ```js
+  // 返回值是字面量对象，需要用小括号包裹起来
+  let person = (name) => ({
+      age: 20,
+      addr: 'Beijing City'
+  })
   ```
