add: complete the Object

--- a/6.Object.md
+++ b/6.Object.md
@@ -41,25 +41,135 @@
   let obj2 = obj1
   ```
 
-  
-
 - 扩展运算符
 
-  
-  
-  
+  ```js
+  let x = {
+      a: 3,
+      b: 4
+  }
+  let y = { ...x }
+  console.log(y) // { a: 3, b: 4 }
+  ```
   
 - Object.assign
 
+  将所有可枚举属性的值从一个或多个源对象复制到目标对象，返回目标对象。
   
+  ```js
+  const target = {
+      a: 1,
+      b: 2
+  }
+  const source = {
+      b: 4,
+      c: 5
+  }
+  
+  const returnTarget = Object.assign(target, source)
+  console.log(target) // { a: 1, b: 4, c: 5 }
+  console.log(returnTarget) // { a: 1, b: 4, c: 5 }
+  ```
+  
+  注意，该方法属于浅拷贝。
+  
+  ```js
+  let target = {
+      a: {
+          b: {
+              c: 1
+          },
+          e: 4,
+          f: 5,
+          g: 6
+      }
+  }
+  let source = {
+      a: {
+          b: {
+              c: 1
+          },
+          e: 2,
+          f: 3
+      }
+  }
+  Object.assign(target, source)
+  console.log(target) // { a: { b: { c:1 }, e: 2, f: 3 } }
+  ```
   
 - in
 
+  ```js
+  let test = {
+      a: 3,
+      b: 4
+  }
+  console.log('a' in test) // true
+  ```
+
 - 对象的遍历方式
 
+  ```js
+  let obj = {
+      name: 'jack'
+  }
+  
+  for (let key in obj) {
+      console.log(key, obj[key]) // name jack
+  }
+  
+  Object.keys(obj).forEach(key => {
+      console.log(key, obj[key])  // name jack
+  })
+  
+  Object.getOwnPropertyNames(obj).forEach(key => {
+      console.log(key, obj[key]) // name jack
+  })
+  
+  Reflect.ownKeys(obj).forEach(key => {
+      console.log(key, obj[key])  // name jack
+  })
+  ```
 
+### 2. 深拷贝
 
+- 代码示例
 
+  ```js
+  JSON.stringify()
+  JSON.parse()
+  ```
+
+  ```js
+  let checkType = data => {
+      return Object.prototype.toString.call(data).slice(8, -1)
+  }
+  
+  let deepClone = target => {
+      let targetType = checkType(target)
+      let result
+      if (targetType === 'Object') {
+          result = {}
+      } else if (targetType === 'Array') {
+          result = []
+      } else {
+          return target
+      }
+      
+      for (let key in target) {
+          let value = target[key]
+          let valueType = checkType(value)
+          if (valueType === 'Object' || valueType === 'Array') {
+              result[key] = deepClone(value)
+          } else {
+              result[key] = value
+          }
+      }
+      return result
+  }
+  ```
+
+  
 
 
 
