add: complete the Set

--- a/9.Set.md
+++ b/9.Set.md
@@ -80,11 +80,76 @@
 - 差集
 
   ```js
-  let arr1 = [1, 2, 3, 4]
+  let arr1 = [1, 3, 4]
   let arr2 = [1, 2, 3, 4, 5, 6]
   let s1 = new Set(arr1)
   let s2 = new Set(arr2)
   
+  let arr3 = new Set(arr1.filter(item => !s2.has(item)))
+  let arr4 = new Set(arr2.filter(item => !s1.has(item)))
+  
+  console.log([...arr3, ...arr4]) // [2, 5, 6]
+  ```
+  
+
+# 2. 遍历方式
+
+- ```keys()```: 返回键名的遍历器
+
+- ```values()```: 返回键值的遍历器
+
+- ```entries()```: 返回键值对的遍历器
+
+- ```forEach()```: 使用回调函数遍历每个成员
+
+- ```for...of```: 直接遍历每个成员
+
+  ```js
+  let s = new Set(['hello', 'world'])
+  console.log(s.keys()) // SetIterator {"hello", "world"}
+  console.log(s.values()) // SetIterator {"hello", "world"}
+  console.log(s.entries()) // SetIterator {"hello" => "hello", "world" => "world"}
+  
+  s.forEach(item => console.log(item)) // hello world
+  
+  for (let item of s) {
+      console.log(item) // hello world
+  }
+  
+  for (let item of s.keys()) {
+      console.log(item)  // hello world
+  } 
+  
+  for (let item of s.values()) {
+      console.log(item) // hello world
+  }
+  
+  for (let item of s.entries()) {
+      console.log(item[0], item[1]) // hello hello  world world
+  }
+  ```
+
+# 3. WeakSet
+
+- WeakSet 的成员只能是对象，不能是其他类型
+
+- WeakSet 没有 size 属性，没有办法遍历其中成员
+
+- WeakSet 中的对象均为弱引用，也就是垃圾回收机制不考虑 WeakSet 对该对象的引用。如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakSet 之中
+
+  ```js
+  let ws = new WeakSet()
+  const obj1 = {
+      name: 'imooc'
+  }
+  const obj2 = {
+      age: 5
+  }
+  
+  ws.add(obj1).add(obj2)
+  ws.delete(obj1)
+  console.log(ws) // WeakSet { {age: 5} }
+  console.log(ws.has(obj2)) // true
   ```
 
   
