fix: fix some form

--- a/10.Map.md
+++ b/10.Map.md
@@ -61,8 +61,7 @@
   console.log(map.get(2)) // two
   ```
 
-
-# 2. 遍历方式
+### 2. 遍历方式
 
 - ```keys()```: 返回新的 Iterator 对象。它包含按照顺序插入 Map 对象中每个元素的 key 值
 
@@ -100,7 +99,7 @@
   } 
   ```
 
-# 3. Map 与 Object 的区别
+### 3. Map 与 Object 的区别
 
 - 键的类型
 
@@ -122,7 +121,7 @@
 
   Map 在涉及到频繁增删键值对的场景下会有些性能优势。
 
-# 4. WeakMap
+### 4. WeakMap
 
 - WeakMap 的成员只能是对象，不能是其他类型
 
