--- a/9.Set.md
+++ b/9.Set.md
@@ -92,7 +92,7 @@
   ```
   
 
-# 2. 遍历方式
+### 2. 遍历方式
 
 - ```keys()```: 返回键名的遍历器
 
@@ -129,7 +129,7 @@
   }
   ```
 
-# 3. WeakSet
+### 3. WeakSet
 
 - WeakSet 的成员只能是对象，不能是其他类型
 
