--- a/11.String.md
+++ b/11.String.md
@@ -28,34 +28,73 @@
 
 ### 3. 模板字符串
 
-- 
-
-
-### 4. String Literals
-
-- WeakMap 的成员只能是对象，不能是其他类型
-
-- WeakMap 没有 size 属性，没有办法遍历其中成员
-
-- WeakMap 中的对象均为弱引用，也就是垃圾回收机制不考虑 WeakMap 对该对象的引用。如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakMap 之中。
+- String Literals
 
   ```js
-  let wm = new WeakMap()
-  const key = {
-      foo: 1
+  console.log(`string text line 1
+  string text line 2`)
+  ```
+
+- Tag Literals
+
+  ```js
+  function Price(strings, type) {
+      let s1 = strings[0]
+      const retailPrice = 20
+      const wholesalePrice = 16
+      let txt = ''
+      if (type === 'retail') {
+          txt = `price: ${retailPrice}`
+      } else {
+          txt = `price: ${wholesalePrice}`
+      }
+      return `${s1}${txt}`
   }
-  wm.set(key, 2)
-  console.log(wm.get(key)) // 2
   ```
-  
+
+### 4. 扩展方法
+
+- String.prototype.fromCodePoint
+
   ```js
-  const k1 = [1, 2, 3]
-  const k2 = [4, 5, 6]
-  const wm = new WeakMap([
-      [k1, 'foo'],
-      [k2, 'bar']
-  ])
-  console.log(wm.get(k2)) // bar
+  // ES5
+  console.log(String.fromCharCode(0x20BB7))
+  
+  // ES6
+  console.log(String.fromCodePoint(0x20BB7))
+  ```
+
+- String.prototype.includes
+
+  ```js
+  // ES5
+  const str = 'imooc'
+  console.log(str.indexOf('mo')) // 1
+  
+  // ES6
+  console.log(str.includes('mo')) // true
+  ```
+
+- String.prototype.startsWith
+
+  ```js
+  const str = 'imooc'
+  console.log(str.startsWith('im')) // true
   ```
   
+- String.prototype.endsWith
+
+  ```js
+  const str = 'imooc'
+  console.log(str.endsWith('mooc')) // true
+  ```
+
+- String.prototype.repeat
+
+  ```js
+  const str = 'imooc'
+  const newStr = str.repeat(3)
+  console.log(newStr) // imoocimoocimooc
+  ```
+
   
