add: complete the Proxy

--- a/13.Proxy.md
+++ b/13.Proxy.md
@@ -55,101 +55,278 @@
   })
   ```
   
-  
-  
-- Number.parseInt
+- 校验数据，解耦业务逻辑
 
   ```js
-  // ES5
-  parseInt('12.34') // 12
-  
-  // ES6
-  Number.parseInt('12.34') // 12
+  const resp = response.data
+  let data = new Proxy(resp, {
+      set(target, key, value) {
+          if (Reflect.has(target, key) && value > 20) {
+              target[key] = value
+          }
+      }
+  })
   ```
   
-- Number.parseFloat
+- 对数据读写进行监控
 
   ```js
-  // ES5
-  parseFloat('123.45#') // 123.45
+  let validator = {
+      set(target, key, value) {
+          if (key === 'age') {
+              if (typeof value !== 'number' || Number.isNaN(value)) {
+                  throw  new TypeError(`Age must be a number`)
+              }
+              if (value <= 0) {
+                  throw new TypeError(`Age must be a positive number`)
+              }
+              target[key] = value
+          }
+          return true
+      }
+  }
+  const person = {
+      age: 27
+  }
+  const proxy = new Proxy(person, validator)
+  proxy.age = 'foo' // Uncaught TypeError: Age must be a number 
+  proxy.age = NaN // Uncaught TypeError: Age must be a number
+  proxy.age = -1 // Uncaught TypeError: Age must be a positive number
   
-  // ES6
-  Number.parseFloat('123.45#') // 123.45
+  proxy.age = 28
+  console.log(proxy.age) // 28
+  
+  // 添加监控
+  window.addEventListener('error', e => {
+      console.log(`capture this error`)
+  }, true)
   ```
   
-- Number.isInteger
+- 实例化一个只读 ID 的对象
 
   ```js
-  Number.isInteger(25) // true
-  Number.isInteger(25.1) // false
-  
-  Number.isInteger() // false
-  Number.isInteger(null) // false
-  Number.isInteger('15') // false
-  Number.isInteger(true) // false
+  class Component {
+      constructor() {
+          this.proxy = new Proxy({
+              id: Math.random().toString(36).slice(-8)
+          })
+      }
+      get id() {
+          return this.proxy.id
+      }
+  }
   ```
   
-- Number.MAX_SAFE_INTEGER
+
+### 3. 常用拦截操作
+
+- get
+
+  拦截对象属性的读取。
 
   ```js
-  Number.MAX_SAFE_INTEGER === Math.pow(2, 53) - 1 // true
-  Number.MAX_SAFE_INTEGER === 9007199254740991 // true
+  let arr = [7, 8, 9]
+  arr = new Proxy(arr, {
+      get(target, prop) {
+          return prop in target ? target[prop] : `error`
+      }
+  })
+  console.log(arr[2]) // 9
+  console.log(arr[5]) // error
   ```
-  
-- Number.MIN_SAFE_INTEGER
 
   ```js
-  Number.MIN_SAFE_INTEGER === -Number.MAX_SAFE_INTEGER // true
+  let dict = {
+      'hello': 'nihao',
+      'world': 'shijie'
+  }
+  dict = new Proxy(dict, {
+      get(target, prop) {
+          return prop in target ? target[prop] : prop
+      }
+  })
+  console.log(dict['hello']) // nihao
+  console.log(dict['imooc']) // imooc
   ```
 
-- Number.isSafeInteger
+- set
 
-  ```js
-  Number.isSafeInteger(Math.pow(2, 53) - 1) // true
-  Number.isSafeInteger(Math.pow(2, 53)) // false
-  ```
-
-### 3. Math 扩展
-
-- Math.trunc
-
-  截止小数部分，返回整数部分
-
-  ```js
-  console.log(Math.trunc(5.5)) // 5
-  console.log(Math.trunc(-5.5)) // -5
-  console.log(Math.trunc(true)) // 1
-  console.log(Math.trunc(false)) // 0
-  console.log(Math.trunc(NaN)) // NaN
-  console.log(Math.trunc(undefined)) // NaN
-  console.log(Math.trunc()) // NaN
-  ```
-
-- Math.sign
-
-  判断一个数是正数，负数，还是零。对于非数值，会先将其转换为数值。
+  设置对象属性的设置，返回一个布尔值。
   
   ```js
-  console.log(Math.sign(5))  // 1
-  console.log(Math.sign(-5)) // -1
-  console.log(Math.sign(0)) // 0
-  console.log(Math.sign(NaN)) // NaN
-  console.log(Math.sign(true)) // 1
-  console.log(Math.sign(false)) // 0
+  let arr = []
+  arr = new Proxy(arr, {
+      set(target, prop, val) {
+          if (typeof val === 'number') {
+              target[prop] = val
+              return true
+          } else {
+              return false
+          }
+      }
+  })
+  arr.push(5)
+  arr.push(6)
+  console.log(arr[0], arr[1], arr.length)
   ```
   
-- Math.cbrt
+- has
 
-  计算一个数的立方根。
+  拦截 ```propKey in proxy``` 的操作，返回一个布尔值。
 
   ```js
-  console.log(Math.cbrt(8)) // 2
-  console.log(Math.cbrt('imooc')) // NaN
+  let range = {
+      start: 1,
+      end: 5
+  }
+  
+  range = new Proxy(range, {
+      has(target, prop) {
+          return prop >= target.start && prop <= target.end
+      }
+  })
+  
+  console.log(2 in range) // true
+  console.log(9 in range) // false
+  ```
+  
+- ownKeys
+
+  拦截 ```Object.getOwnPropertyNames()``` ```Object.getOwnPropertySymbols``` ```Object.keys``` ```for...in``` 循环，返回一个数组。该方法返回目标对象所有自身属性的属性名，而 ```Object.keys``` 的返回结果仅包括目标对象的可遍历属性。
+
+  ```js
+  let obj = {
+      name: 'imooc',
+      [Symbol('es')]: 'es6' 
+  }
+  console.log(Object.getOwnPropertyNames(obj)) // ["name"]
+  console.log(Object.getOwnPropertySymbols(obj)) // [Symbol(es)]
+  console.log(Object.keys(obj)) // ["name"]
+  for (let key in obj) {
+      console.log(key) // name
+  }
+  ```
+
+  ```js
+  let userInfo = {
+      username: 'xiaoming',
+      age: 18,
+      _password: 'xxx'
+  }
+  userInfo = new Proxy(userInfo, {
+      ownKeys(target) {
+          return Object.keys(target).filter(key => !key.startsWith('_'))
+      }
+  })
+  
+  console.log(Object.keys(userInfo)) // ["username", "age"]
+  ```
+
+- deleteProperty
+
+  拦截 ```delete proxy[propKey]``` 的操作，返回一个布尔值。
+
+  ```js
+  let user = {
+      name: 'xiaoming',
+      age: 18,
+      _password: 'xxx'
+  }
+  user = new Proxy(user, {
+      get(target, prop) {
+          if (prop.startsWith('_')) {
+              throw new Error(`do not allow access`)
+          } else {
+              return target[prop]
+          }
+      },
+      set(target, prop, val) {
+          if (prop.startsWith('_')) {
+              throw new Error(`do not allow access`)
+          } else {
+              target[prop] = val
+              return true
+          }
+      },
+      deleteProperty(target, prop) {
+          if (prop.startsWith('_')) {
+              throw new Error('do not allow delete')
+          } else {
+              delete target[prop]
+              return true
+          }
+      },
+      ownKeys(target) {
+          return Object.keys(target).filter(key => !key.startsWith('_'))
+      }
+  })
+  
+  console.log(user.age) // 18
+  console.log(user._password) // Uncaught Error: do not allow access
+  
+  user.age = 20
+  console.log(user.age) // 20
+  
+  try {
+      user._password = 'xx'
+  } catch(e) {
+      console.log(e.message) // do not allow access
+  }
+  
+  try {
+      delete user._password
+  } catch(e) {
+      console.log(e.message) // do not allow delete
+  }
+  
+  for (let key in user) {
+      console.log(key) // name age
+  }
+  ```
+
+- apply
+
+  拦截 Proxy 实例作为函数调用的操作，比如 ```proxy(...args)``` ```proxy.call(object, ...args)``` ```proxy.apply(...)```
+
+  ```js
+  let sum = (...args) => {
+      let num = 0
+      args.forEach(item => {
+          num += item
+      })
+      return num
+  }
+  sum = new Proxy(sum, {
+      apply(target, ctx, args) {
+          return target(...args) * 2
+      }
+  })
+  
+  console.log(sum(1, 2)) // 6
+  console.log(sum.call(null, 1, 2, 3)) // 12
+  console.log(sum.apply(null, [1, 2, 3])) // 12
+  ```
+
+- construct
+
+  拦截 Proxy 实例作为构造函数调用的操作，比如 ```new Proxy(...args)```
+
+  ```js
+  class User {
+      constructor(name) {
+          this.name = name
+      }
+  }
+  User = new Proxy(User, {
+      construct(target, args, newTarget) {
+          console.log('construct')
+          return new target(...args)
+      }
+  })
+  console.log(new User('imooc')) // construct  User {name: 'imooc'}
   ```
 
   
-
-
 
 
 
