--- a/14.Reflect.md
+++ b/14.Reflect.md
@@ -171,8 +171,106 @@
   // {value: "f", writable: false, enumerable: true, configurable: false}
   ```
 
+- Reflect.getPrototypeOf
+
+- Reflect.has
+
+- Reflect.isExtensible
+
+- Reflect.ownKeys
+
+  ```js
+  Reflect.ownKeys({
+      z: 3,
+      y: 2,
+      x: 1
+  }) // ['z', 'y', 'x']
+  
+  Reflect.ownKeys([]) // ["length"]
+  ```
+
+  ```js
+  let sym = Symbol.for('comet')
+  let sym2 = Symbol.for('meteor')
+  let obj = {
+      [sym]: 0,
+      'str': 0,
+      '773': 0,
+      '0': 0,
+      [sym2]: 0,
+      '-1': 0,
+      '8': 0,
+      'second str': 0
+  }
+  Reflect.ownKeys(obj)
+  // ["0", "8", "773", "str", "-1", "second str", Symbol(comet), Symbol(meteor)]
+  ```
+
+- Reflect.preventExtensions
+
+  ```js
+  let empty = {}
+  Reflect.isExtensible(empty) // true
+  
+  Reflect.preventExtensions(empty)
+  Reflect.isExtensible(empty) // false
+  ```
+
+  ```js
+  Reflect.preventExtensions(1) // Uncaught TypeError
+  
+  Object.preventExtensions(1) // 1
+  ```
+
+- Reflect.set
+
+  ```js
+  let obj = {}
+  Reflect.set(obj, 'prop', 'value')
+  obj.prop // value
+  
+  let arr = ['duck', 'duck', 'duck']
+  Reflect.set(arr, 2, 'goose')
+  arr // ['duck', 'duck', 'goose']
+  ```
+
+  ```js
+  let arr = ['duck', 'duck', 'duck']
+  Reflect.set(arr, 'length', 1)
+  arr // ['duck']
+  ```
+
+  ```js
+  let obj = {}
+  Reflect.set(obj)
+  Reflect.getOwnPropertyDescriptor(obj, 'undefined')
+  // {value: undefined, writable: true, enumerable: true, configurable: true}
+  ```
+
+- Reflect.setPrototypeOf
+
+  改变指定对象的原型。
+
+  ```js
+  Reflect.setPrototypeOf({}, Object.prototype) // true
+  
+  // It can change an object's [[Prototype]] to null.
+  Reflect.setPrototypeOf({}, null) // true
+  
+  // Returns false if target is not extensible.
+  Reflect.setPrototypeOf(Object.freeze({}), null) // false
+  
+  // Returns false if it cause a prototype chain cycle.
+  let target = {}
+  let proto = Object.create(target)
+  Reflect.setPrototypeOf(target, proto) // false
+  ```
+
   
 
+  
+
+  
 
 
 
